test: add unit and integrated tests for restaurant service